# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yml  fly.toml  spec.yaml  spec.yml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20210315101150_make_status_not_null_in_subscriptions.sql  20220514133855_seed_user.sql  20220520081728_create_idempotency_table.sql  20220520105347_relax_null_checks_on_idempotency.sql  20220520124412_create_newsletter_issues_table.sql  20220520124657_create_issue_delivery_queue_table.sql  20220520145432_create_add_retries_and_execute_after.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: mod.rs  new_password.rs  subscriber_email.rs  subscriber_name.rs  subscriber_token.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/newsletter/: get.rs  mod.rs  post.rs
templates/: admin.html  base.html  home.html  login.html  plain_email.txt
templates/admin/: dashboard.html  newsletters.html
templates/admin/password/: change_password.html
templates/email/: html_email.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/admin/: change_password.rs  dashboard.rs  mod.rs  newsletter.rs
