[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sky Brewer <jacobrewer@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls"
] }
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
unicode-segmentation = "1"
validator = "0.14"
rand = { version = "0.8", features = ["std_rng"] }
[dependencies.tera]
version = "1"
features = ["builtins"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
